--- a/templates/blood/adminbase.html
+++ b/templates/blood/adminbase.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blood Works - Admin</title>
+    <title>Occurence - Admin</title>
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -66,159 +66,19 @@ color: red;
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg bg-danger fixed-top navbar-dark">
+<nav class="navbar navbar-expand-lg bg-success fixed-top navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Blood Works - Quick Info:</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" href="/admin">OCCURENCE BOOK - Click to enter root administrator</a>
+
+        <a class="navbar-brand bg-warning" href="/logout">Logout</a>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/admin-donor">Registered Donors {{ totaldonors}}</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Complaints</a>
-                </li>
-            </ul>
+
         </div>
     </div>
 </nav>
 <br><br>
-<div class="container-fluid">
-    <div class="row flex-nowrap">
-        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
-            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <span class="fs-5 d-none d-sm-inline">Admin Panel</span>
-                </a>
 
-                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                    <li class="nav-item">
-                        <a href="/" class="nav-link align-middle px-0">
-                            <i class="fs-4 fa fa-desktop"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/admin-blood-drives" class="nav-link align-middle px-0">
-                            <i class="fs-4 fa fa-map-signs"></i> <span class="ms-1 d-none d-sm-inline">Active Blood Drives</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi bi-journal-medical"></i> <span class="ms-1 d-none d-sm-inline">Reports</span>
-                        </a>
-                        <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="/view-all-reports" class="nav-link px-0"> <span class="d-none d-sm-inline">View All Reports</span></a>
-                            </li>
-                            <li>
-                                <a href="/admin/volunteer/stationreport/" class="nav-link px-0"> <span class="d-none d-sm-inline">View Station Reports</span></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi bi-person-lines-fill"></i> <span class="ms-1 d-none d-sm-inline">All Users</span>
-                        </a>
-                        <ul class="collapse show nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="/admin-donor" class="nav-link px-0"> <span class="d-none d-sm-inline">Donors</span></a>
-                            </li>
-                            <li>
-                                <a href="/admin-volunteers" class="nav-link px-0"> <span class="d-none d-sm-inline">Volunteers</span></a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="/admin-donation" class="nav-link px-0 align-middle">
-                            <i class="fs-4 fa fa-tint"></i> <span class="ms-1 d-none d-sm-inline">Donations</span> </a>
-                    </li>
-                    <li>
-                        <a href="/admin-request" class="nav-link px-0 align-middle">
-                            <i class="fs-4 fa fa-inbox"></i> <span class="ms-1 d-none d-sm-inline">Blood Requests</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/admin-request-history" class="nav-link px-0 align-middle">
-                            <i class="fs-4 fa fa-history"></i> <span class="ms-1 d-none d-sm-inline">Request History</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/admin-blood" class="nav-link px-0 align-middle">
-                            <i class="fs-4 fas fa-chart-pie"></i> <span class="ms-1 d-none d-sm-inline">Blood Stock</span> </a>
-                    </li>
-                    <li>
-                        <a href="/admin-appointment" class="nav-link px-0 align-middle">
-                            <i class="fs-4 fa fa-calendar"></i> <span
-                                class="ms-1 d-none d-sm-inline">Show Appointments</span> </a>
-                    </li>
-                    <li>
-                        <a href="/create-campaign" class="nav-link px-0 align-middle">
-                            <i class="fs-4 fa fa-bullhorn"></i> <span
-                                class="ms-1 d-none d-sm-inline">Create Email Campaign</span> </a>
-                    </li>
-                    <!-- <li>
-                         <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
-                             <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline">Bootstrap</span></a>
-                         <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
-                             <li class="w-100">
-                                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1</a>
-                             </li>
-                             <li>
-                                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2</a>
-                             </li>
-                         </ul>
-                     </li>
-                     <li>
-                         <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                             <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Products</span> </a>
-                         <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
-                             <li class="w-100">
-                                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 1</a>
-                             </li>
-                             <li>
-                                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a>
-                             </li>
-                             <li>
-                                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 3</a>
-                             </li>
-                             <li>
-                                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 4</a>
-                             </li>
-                         </ul>
-                     </li>-->
-
-                </ul>
-                <hr>
-                <div class="dropdown pb-4">
-                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-                       id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30"
-                             class="rounded-circle">
-                        <span class="d-none d-sm-inline mx-1">Admin</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-                        <li><a class="dropdown-item" href="/admin"><i class="bi bi-person-lock"></i> Root Admin</a></li>
-                        <li><a class="dropdown-item" href="/admin/auth/user/1/change/"><i class="bi bi-person-fill-gear"></i> Profile</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="/logout">Logout &nbsp; <i
-                                class="fas fa-sign-out-alt"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col py-3">
-            {% block content %}
-
-            {% endblock content %}
-        </div>
-    </div>
-</div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
